<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.coolechera.RuteroActivity" >

    <TextView
        android:id="@+id/textViewInfoVendedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#09c"
        android:textSize="16sp" />

    <View
        android:id="@+id/viewLineaSuperior"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/textViewInfoVendedor"
        android:layout_marginTop="10dp"
        android:background="#ff4444" />

    <TableLayout
        android:id="@+id/tableLayoutInfoCliente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewLineaSuperior"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:text="@string/label_cedula_vendedor" />

            <TextView
                android:id="@+id/textViewCedulaVendedor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:text="@string/label_codigo_vendedor" />

            <TextView
                android:id="@+id/textViewCodigoVendedor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:text="@string/label_fecha_labores_vendedor" />

            <TextView
                android:id="@+id/textViewFechaLabores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:text="@string/label_zona_vendedor" />

            <TextView
                android:id="@+id/textViewZona"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/viewLineaMedia"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/tableLayoutInfoCliente"
        android:layout_marginTop="5dp"
        android:background="#ff4444" />

    <TextView
        android:id="@+id/section_label_info_venta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewLineaMedia"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/section_label_resumen_estadisticas" />

    <TableLayout
        android:id="@+id/tableLayoutInfoVenta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label_info_venta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:text="@string/label_visitas" />

            <TextView
                android:id="@+id/textViewVisitas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:text="@string/label_total_pedido" />

            <TextView
                android:id="@+id/textViewTotalPedidos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:text="@string/label_pedidos_sincronizados" />

            <TextView
                android:id="@+id/textViewPedidosSincronizados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:text="@string/label_pedidos_no_sincronizados" />

            <TextView
                android:id="@+id/textViewPedidosNoSincronizados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:text="@string/label_no_compras" />

            <TextView
                android:id="@+id/textViewNoCompras"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:text="@string/label_no_compras_sincronizados" />

            <TextView
                android:id="@+id/textViewNoComprasSincronizados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:text="@string/label_no_compras_no_sincronizados" />

            <TextView
                android:id="@+id/textViewNoComprasNoSincronizados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:text="@string/label_efectividad" />

            <TextView
                android:id="@+id/textViewEfectividad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start"
                android:text="@string/label_total_venta" />

            <TextView
                android:id="@+id/textViewTotalVentas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSearchResultSubtitle" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/viewLineaInferior"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/tableLayoutInfoVenta"
        android:layout_marginTop="5dp"
        android:background="#ff4444" />

</RelativeLayout>